# CS5330-Project

./: .gitattributes  .gitignore  README.md  final_02.ipynb  pyproject.toml
data/: lab01_full.MOV  lab01_trim.MOV  lab02_full.MOV
src/: extract_frames.py  geometry.py
src/visual_odometry/: __init__.py  correspondances.py  geometry.py  gluestick_correspondances.py  keypoints.py  main.py  orb3_correspondances.py  plotting.py  sift_correspondances.py
visual-odometry/: README.md  pyproject.toml
visual-odometry/src/visual_odometry/: keypoints.py
visual_odometry/: main.py
