[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visual-odometry"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
keywords = []
authors = [
  { name = "Jasen Levoy" },
  { name = "Quinn Schebell" },
]
dependencies = [
  "numpy",
  "opencv-python",
]

[tool.hatch.version]
path = "src/visual_odometry/__about__.py"
