[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visual-odometry"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
keywords = []
authors = [
  { name = "Jasen Levoy" },
  { name = "Quinn Schebell" },
]
dependencies = [
  "matplotlib",
  "numpy",
  "opencv-python",
]

[tool.hatch.version]
path = "src/visual_odometry/__about__.py"

[project.scripts]
vo = "visual_odometry.main:main"
