[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visual-odometry"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
keywords = []
authors = [
  { name = "Jasen Levoy" },
  { name = "Quinn Schebell" },
]
dependencies = [
  "gluestick @ git+https://github.com/cvg/GlueStick.git",
  "matplotlib",
  "numpy<2",
  "opencv-python",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/visual_odometry/__about__.py"

[project.scripts]
vo = "visual_odometry.main:main"
